src/test/ui/const-generics/issues/issue-76595.stderr
error[E0107]: wrong number of generic arguments: expected 2, found 1
  --> $DIR/issue-76595.rs:15:5
   |
LL |     test::<2>();
   |     ^^^^^^^^^ expected 2 generic arguments

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
